--- a/index.html
+++ b/index.html
@@ -7,25 +7,40 @@
     <link rel="stylesheet" href="/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   </head>
+
   <body>
     <div class="cv-container">
       <div class="left-column">
         <img class="portait" src="/image/photo CV (3).jpg" alt="photo CV" />
+        <p>
+          <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+            Link with href
+          </a>
+          <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+            Button with data-bs-target
+          </button>
+        </p>
+        <div class="collapse" id="collapseExample">
+          <div class="card card-body">
+            bonjour.
+          </div>
+        </div>
+        
         <div class="section">
           <h2>À PROPOS</h2>
           <p>
-            Le Gaming est l'une de mes plus grande passion depuis mon plus jeune age, cela creant ainsi une envie de les developper et d'imaginer plusieurs histoires, plusieurs contextes, scripts et surtout animations afin de pouvoir exprimer mon imagination.  
+            Le Gaming est l'une de mes plus grande passion depuis mon plus jeune age, cela créant ainsi une envie de les développer et d'imaginer plusieurs histoires, plusieurs contextes, scripts et surtout animations afin de pouvoir exprimer mon imagination.  
           </p>
           <p>
-            Assez debrouillard et indépendant dans mon travail, apprendre de nouvelles technologies est un passe-temps, passer du temps à résoudre des problèmes et réaliser du code de qualité est egalement aussi importants pour moi. Mes valeurs de travail : travail d'equipe,flexibilité et performance.
+            Assez débrouillard et indépendant dans mon travail, apprendre de nouvelles technologies est un passe-temps, passer du temps à résoudre des problèmes et réaliser du code de qualité est également aussi importants pour moi. Mes valeurs de travail : travail d'equipe,flexibilité et performance.
           </p>
         </div>
         <div class="section">
           <h2>COMPÉTENCES</h2>
           <ul class="skills">
             <li><i class="icon fas fa-check-circle text-darkblue"></i> <strong>Bootstrap</strong></li>
-            <li><i class="icon fas fa-check-circle text-darkblue"></i> <strong>HTML5 &#124; CSS3 &#124; SASS</strong></li>
-            <li><i class="icon fas fa-check-circle text-darkblue"></i> Git &#124; Github</li>
+            <li><i class="icon fas fa-check-circle text-darkblue"></i> <strong>HTML5 &#124; CSS </strong></li>
+            <li><i class="icon fas fa-check-circle text-darkblue"></i> <strong>Git &#124;</strong><strong> Github</strong></li>
           </ul>
         </div>
         <div class="section">
@@ -41,7 +56,7 @@
         <div class="section">
           <h2>Centres d'intérêt</h2>
           <p>
-            Jeux vidéo, jouer et développer
+            Jeux vidéo: jouer et développer
             <br>
             Musique, écoute et composition
             <br>
@@ -66,11 +81,11 @@
             <p>
               <strong>2018 <i class="fas fa-long-arrow-alt-right"></i> 2020</strong>
               <br>
-              Stage dans une ecole de pilotage a Flying Academy Miami
+              Stage dans une école de pilotage à Flying Academy Miami
             </p>
             <ul class="experience-list">
-              <li>Preparations de l'avion, de sa mise en route et du carnet de route</li>
-              <li>Pilotage de l'avion d'un point A a un point B</li>
+              <li>Préparations de l'avion, de sa mise en route et du carnet de route</li>
+              <li>Pilotage de l'avion d'un point A à un point B</li>
               <li>Murissement par l'augmentation des heures de vols</li>
 
             </ul>
@@ -80,7 +95,7 @@
             <p>
               <strong>2022 <i class="fas fa-long-arrow-alt-right"></i> Aujourd'hui</strong>
               <br>
-              <em>Bachelor Developpeur Informatique, Option Jeu Video</em>, Gaming Campus, Paris, France
+              <em>Bachelor Developpeur Informatique, Option Jeu Vidéo</em>, Gaming Campus, Paris, France
             </p>
             <p>
               <strong>2020 <i class="fas fa-long-arrow-alt-right"></i> 2021</strong>
@@ -95,7 +110,7 @@
             <p>
               <strong>2017<i class="fas fa-long-arrow-alt-right"></i> 2018</strong>
               <br>
-              <em>Bachelier Serie Scientifique</em>, Ecole BIRD, Madagascar
+              <em>Bachelier Série Scientifique</em>, Ecole BIRD, Madagascar
             </p>
           </div>
           <div class="section">
