--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CV Rasolojaona Mamitiana</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   </head>
 
@@ -12,60 +14,46 @@
     <div class="cv-container">
       <div class="left-column">
         <img class="portait" src="/image/photo CV (3).jpg" alt="photo CV" />
-        <p>
-          <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-            Link with href
-          </a>
-          <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-            Button with data-bs-target
-          </button>
-        </p>
-        <div class="collapse" id="collapseExample">
-          <div class="card card-body">
-            bonjour.
-          </div>
-        </div>
-        
-        <div class="section">
-          <h2>À PROPOS</h2>
-          <p>
+          <div class="section">
+            <h2>À PROPOS</h2>
+            <p>
             Le Gaming est l'une de mes plus grande passion depuis mon plus jeune age, cela créant ainsi une envie de les développer et d'imaginer plusieurs histoires, plusieurs contextes, scripts et surtout animations afin de pouvoir exprimer mon imagination.  
-          </p>
-          <p>
+            </p>
+            <p>
             Assez débrouillard et indépendant dans mon travail, apprendre de nouvelles technologies est un passe-temps, passer du temps à résoudre des problèmes et réaliser du code de qualité est également aussi importants pour moi. Mes valeurs de travail : travail d'equipe,flexibilité et performance.
-          </p>
-        </div>
-        <div class="section">
-          <h2>COMPÉTENCES</h2>
-          <ul class="skills">
-            <li><i class="icon fas fa-check-circle text-darkblue"></i> <strong>Bootstrap</strong></li>
-            <li><i class="icon fas fa-check-circle text-darkblue"></i> <strong>HTML5 &#124; CSS </strong></li>
-            <li><i class="icon fas fa-check-circle text-darkblue"></i> <strong>Git &#124;</strong><strong> Github</strong></li>
-          </ul>
-        </div>
-        <div class="section">
-          <h2>Langues</h2>
-          <p>
+            </p>
+          </div>
+          <div class="section">
+            <h2>COMPÉTENCES</h2>
+            <ul class="skills">
+              <li><i class="icon fas fa-check-circle text-darkblue"></i> <strong>Bootstrap</strong></li>
+              <li><i class="icon fas fa-check-circle text-darkblue"></i> <strong>HTML5 &#124; CSS </strong></li>
+              <li><i class="icon fas fa-check-circle text-darkblue"></i> <strong>Git &#124;</strong><strong> Github</strong></li>
+            </ul>
+          </div>
+          <div class="section">
+            <h2>Langues</h2>
+            <p>
             Français, langue maternelle
             <br>
             Anglais, compétence professionnelle
             <br>
             Espagnol, bases linguistiques
-          </p>
-        </div>
-        <div class="section">
-          <h2>Centres d'intérêt</h2>
-          <p>
-            Jeux vidéo: jouer et développer
-            <br>
-            Musique, écoute et composition
-            <br>
-            Sport : Tennis, Basket
-            <br>
-            Aviation
-          </p>
-        </div>
-      </div>
+            </p>
+          </div>
+          <div class="section">
+            <h2>Centres d'intérêt</h2>
+            <p>
+              <i class="fas fa-gamepad"></i> Jeux vidéo: jouer et développer
+              <br>
+              <i class="fas fa-music"></i> Musique, écoute et composition
+              <br>
+              <i class="fas fa-running"></i> Sport : Tennis, Basket
+              <br>
+              <i class="fas fa-plane"></i> Aviation
+            </p>
+          </div>
+    </div>
       <div class="right-column">
         <div class="header">
           <h1>RASOLOJAONA Mamitiana</h1>
@@ -74,12 +62,22 @@
             <li><i class="icon fas fa-phone text-blue"></i> 06 19 55 19 32</li>
             <li><i class="icon fas fa-map-marker-alt text-blue"></i> 02 RUE DURET, 75116 Paris</li>
           </ul>
+          <br>
+          <div class="dropbtn">
+            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Réseaux sociaux
+            </button>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="https://www.facebook.com/rasolojaonamamitiana" target="_blank"><i class="icon fab fa-facebook text-darkblue"></i> Facebook</a></li>
+              <li><a class="dropdown-item" href="https://www.instagram.com/hari_mams/" target="_blank"><i class="icon fab fa-instagram text-darkblue"></i>Instagram</a></li>
+            </ul>
+          </div>
         </div>
         <div class="content">
           <div class="section">
             <h2>Expériences <br><span class="text-blue">professionelles</span></h2>
             <p>
-              <strong>2018 <i class="fas fa-long-arrow-alt-right"></i> 2020</strong>
+              <strong>2018 <i class="fas fa-long-arrow-alt-right" aria-hidden="true"></i> 2020</strong>
               <br>
               Stage dans une école de pilotage à Flying Academy Miami
             </p>
@@ -87,7 +85,6 @@
               <li>Préparations de l'avion, de sa mise en route et du carnet de route</li>
               <li>Pilotage de l'avion d'un point A à un point B</li>
               <li>Murissement par l'augmentation des heures de vols</li>
-
             </ul>
           </div>
           <div class="section">
@@ -116,7 +113,7 @@
           <div class="section">
             <h2>Autres <br><span class="text-blue">expériences</span></h2>
             <p>
-              Permis B (voiture)
+              <i class="fas fa-car"></i> Permis B (voiture)
             </p>
           </div>
         </div>
